added new battle codes

--- a/Battle #96.html
+++ b/Battle #96.html
@@ -1,2 +1,6 @@
 <div><p a></p></div><style>body{background:#243D83;}
-    div{background:#6592CF;width:200px;aspect-ratio:1;border-radius:50%;position:absolute;left:100px;top:50px;overflow:hidden;}div::before{background:#6592CF;width:130px;aspect-ratio:1;border-radius:50%;position:absolute;content:'';left:35px;top:-40px;box-shadow:0 150px 0 0 #6592CF,0 150px 0 20px #243D83,0 0 0 20px #243D83;}div::after{content:'';position:absolute;width:130px;aspect-ratio:1;border-radius:50%;background:transparent;border:20px solid #243D83;left:-60px;top:15px;}[a]{position:absolute;width:130px;aspect-ratio:1;border-radius:50%;background:transparent;border:20px solid #243D83;left:90px;top:-1px;}</style>
+    div{background:#6592CF;width:200px;aspect-ratio:1;border-radius:50%;position:absolute;left:100px;top:50px;overflow:hidden;}
+    div::before{background:#6592CF;width:130px;aspect-ratio:1;border-radius:50%;position:absolute;content:'';left:35px;top:-40px;box-shadow:0 150px 0 0 #6592CF,0 150px 0 20px #243D83,0 0 0 20px #243D83;}
+    div::after{content:'';position:absolute;width:130px;aspect-ratio:1;border-radius:50%;background:transparent;border:20px solid #243D83;left:-60px;top:15px;}
+    [a]{position:absolute;width:130px;aspect-ratio:1;border-radius:50%;background:transparent;border:20px solid #243D83;left:90px;top:-1px;}
+    </style>
